dividing publish flow into parts to fix constant problem with overflowing angular budget + minor fixies

--- a/angular-frontend/src/styles/_variables.scss
+++ b/angular-frontend/src/styles/_variables.scss
@@ -41,7 +41,7 @@ $color-icon-dark: #353A41;
 $color-bg-light: #f8f9fa;
 $color-bg-hover: #f1f3f5;
 $color-bg-disabled: #fcfcfc;
-$color-bg-selected: #e7f3ff;
+$color-bg-selected: #f0f6fc;
 $color-bg-muted: #e9ecef;
 
 // Border Colors
